samples/_failures_safe/1761460451_97a1c3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_194ba00d.c: In function ‘main’:
./samples/SAFE/__tmp_194ba00d.c:182:34: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  182 |     printf("Tokens found: %d\n", token
      |                                  ^~~~~
      |                                  Token
./samples/SAFE/__tmp_194ba00d.c:182:34: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_194ba00d.c:182:39: error: expected ‘)’ at end of input
  182 |     printf("Tokens found: %d\n", token
      |           ~                           ^
      |                                       )
./samples/SAFE/__tmp_194ba00d.c:182:5: error: expected declaration or statement at end of input
  182 |     printf("Tokens found: %d\n", token
      |     ^~~~~~
